fix: safari pinch jumpscare

--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -583,10 +583,10 @@ button:hover,
 
   .leftColumn {
     position: fixed;
-    top: var(--space-3xl);
+    top: calc(var(--space-3xl) + 60px);
     left: calc(50vw - 640px + var(--space-xl));
     width: calc(640px - var(--space-xl) - var(--space-md) / 2);
-    height: calc(100vh - 2 * var(--space-3xl));
+    height: calc(100vh - 2 * var(--space-3xl) - 60px);
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -651,10 +651,10 @@ button:hover,
 
   .leftColumn {
     position: fixed;
-    top: var(--space-3xl);
+    top: calc(var(--space-3xl) + 60px);
     left: var(--space-xl);
     width: calc((100vw - 2 * var(--space-xl) - var(--space-md)) / 2);
-    height: calc(100vh - 2 * var(--space-3xl));
+    height: calc(100vh - 2 * var(--space-3xl) - 60px);
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
